Laying the foundation.

--- a/City Generation/City Generation.vcproj
+++ b/City Generation/City Generation.vcproj
@@ -170,12 +170,36 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\main.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Color.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Mat4x4.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MyUtil.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Vec2.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Vec3.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
