--- a/City Generation/City Generation.vcproj
+++ b/City Generation/City Generation.vcproj
@@ -181,6 +181,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\Camera.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Color.h"
 				>
 			</File>
