--- a/City Generation/City Generation.vcproj
+++ b/City Generation/City Generation.vcproj
@@ -209,6 +209,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Skybox.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Texture.h"
 				>
 			</File>
